# electromagnetics

./: README.md  class_notes.md
Computational Methods in Electrical Engineering/: Lecture -- Design of Optical Kinoforms.txt  MATLAB Session -- Deriving finite-difference approximations.txt  MATLAB Session -- Golden Section Search Visualization.txt  MATLAB Session -- Golden Section Search.txt  MATLAB Session -- Jacobi Method.txt  MATLAB Session -- Numerical Integration.txt  MATLAB Session -- Secant Method.txt  MATLAB Session -- Steepest Ascent Method.txt  MATLAB Session -- Visualize Discrete Integration.txt  Topic 3a -- Review of Linear Algebra.txt  Topic 3b -- Numerical Linear Algebra.txt  Topic 4a -- Introduction to root-finding & bracketing methods.txt  Topic 4b -- Open methods.txt  Topic 5a -- Introduction & linear regression.txt  Topic 5b -- Nonlinear regression.txt  Topic 5c -- Polynomial fitting & interpolation.txt  Topic 6a -- Numerical Integration.txt  Topic 6b -- Finite-difference approximations.txt  Topic 6c -- Numerical Differentiation.txt  Topic 7a -- One-dimensional finite-difference method.txt  Topic 7b -- Slab waveguide analysis.txt  Topic 7c -- Multivariable FDM.txt  Topic 7d -- Two-Dimensional Finite-Difference Method.txt  Topic 7e -- Finite-Difference Analysis of Transmission Lines.txt  Topic 7f -- Time-Domain FDM.txt  Topic 8a -- Introduction to Optimization.txt  Topic 8b -- Single Variable Optimization.txt  Topic 8c -- Multivariable Optimization.txt
ufdtd_examples-master/ufdtd_examples-master/: .ccls  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
ufdtd_examples-master/ufdtd_examples-master/cMake/: SetupMPI.cmake  SetupPETSC.cmake  functions.cmake
ufdtd_examples-master/ufdtd_examples-master/examples/: CMakeLists.txt
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.10/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.11/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.12/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.12-2/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.5/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.5-2/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.8/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch3.9/: main.c
ufdtd_examples-master/ufdtd_examples-master/examples/ch4.5/: CMakeLists.txt  abc.c  config.c  fdtd.c  fdtd.h  grid.c  main.c  snapshot.c
ufdtd_examples-master/ufdtd_examples-master/utils/: README.md  waterfall.py
(+52 files in other folders)
